--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Esse é um título</h1>
+        <h2>Esse é um titulo menor</h2>
 
         <p>Isso é um paragrafo</p>
         <img src="html-logo-main/html.png">
