--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Portifolio</title>
-    </head>
-    <body>
-        <h1>Esse é um título</h1>
-        <h2>Esse é um titulo menor</h2>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel = 'stylesheet' href = 'style.css'>
+</head>
+<body>
+    <header></header>
+    <main class = 'apresentacao'>
+        <h1>Eleve seu negócio digital a outro nível <strong class = 'titulo-destaque'>com um Front-end de qualidade!</strong></h1>
+        <p>Olá! Sou Vinicius Moura, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar? </p>
+        <a href = 'www.linkedin.com/in/vinicius-gouvêa-de-moura-303586254'>Linkedin</a>
+        <a href = 'https://github.com/gouveamoura'>GitHub</a>
+        <img src = 'foto_oficial.jpeg' alt = 'Vinicius Moura foto'>
 
-        <p>Isso é um paragrafo</p>
-        <img src="html-logo-main/html.png">
 
-
-    </body>
-
-
+    </main>
+    <footer></footer>
+</body>
 </html>
