--- a/index.html
+++ b/index.html
@@ -3,20 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel = 'stylesheet' href = 'style.css'>
+    <title>Portfolio de Vinicius Moura</title>
+    <link rel = 'stylesheet' href = './style/style.css'>
 </head>
 <body>
-    <header></header>
+    <header class = 'cabecalho'>
+        <nav class = 'cabecalho__menu'>
+            <a class = 'cabecalho__menu__link' href = 'index.html'>HOME</a>
+            <a class = 'cabecalho__menu__link' href = 'about.html'>SOBRE MIM</a>
+        </nav>
+    </header>
     <main class = 'apresentacao'>
-        <h1>Eleve seu negócio digital a outro nível <strong class = 'titulo-destaque'>com um Front-end de qualidade!</strong></h1>
-        <p>Olá! Sou Vinicius Moura, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar? </p>
-        <a href = 'www.linkedin.com/in/vinicius-gouvêa-de-moura-303586254'>Linkedin</a>
-        <a href = 'https://github.com/gouveamoura'>GitHub</a>
-        <img src = 'foto_oficial.jpeg' alt = 'Vinicius Moura foto'>
+        <section class = 'apresentacao__conteudo'>    
+            <h1 class = 'apresentacao__conteudo__titulo'>Eleve seu negócio digital a outro nível <strong class = 'titulo-destaque'>com um Cientista de dados de qualidade!</strong></h1>
+            <p class = 'apresentacao__conteudo__texto'>Olá! Sou Vinicius Moura, Cientista de Dados com experiência em Python, Power BI e Excel. Transformo dados em insights estratégicos para apoiar decisões inteligentes. Se você busca otimizar processos e visualizar informações de forma eficiente, vamos conversar! </p>
+            <div class = 'apresentacao__links'>
+                <h2 class = 'apresentacao__links__subtitulo'>"Acesse minhas redes"</h2>
+                <a class = 'apresentacao__links__link' href = 'https://www.linkedin.com/in/vinicius-gouvêa-de-moura-303586254/'>
+                    <img src = './assets/linkedin.png'>
+                    Linkedin
+                </a>
+                <a class = 'apresentacao__links__link' href = 'https://github.com/gouveamoura'>
+                    <img src = './assets/github.png'>
+                    GitHub
+                </a>
+            </div>
+        </section>
+        <img class = 'imagem' src = './assets/foto_oficial.jpeg' alt = 'Vinicius Moura foto'>
 
 
     </main>
-    <footer></footer>
+    <footer class = 'rodape'>
+        <p>Desenvolvido por Vinicius Moura</p>
+    </footer>
 </body>
 </html>
